service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-cicd
spec:
  type: NodePort
  selector:
    app: hello-cicd
  ports:
    - port: 80
      targetPort: 3000
